Website generation with Couscous

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 
     <title>CakeManager Couscous</title>
 
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/css/highlight.dark.css">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="http://leoruhland.github.io/cakemanager-couscous/css/bootstrap.min.css">
+    <link rel="stylesheet" href="http://leoruhland.github.io/cakemanager-couscous/css/font-awesome.min.css">
+    <link rel="stylesheet" href="http://leoruhland.github.io/cakemanager-couscous/css/highlight.dark.css">
+    <link rel="stylesheet" href="http://leoruhland.github.io/cakemanager-couscous/css/main.css">
 </head>
 <body>
 
@@ -22,7 +22,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">
+                <a class="navbar-brand" href="http://leoruhland.github.io/cakemanager-couscous/">
                     CakeManager Couscous
                     <small class="hidden-xs hidden-sm">
                         CakeManager Template for Couscous.
@@ -55,27 +55,27 @@
 
                 <ul class="nav nav-pills nav-stacked">
                                         <li class="active">
-                        <a href="/" target="_self">
+                        <a href="http://leoruhland.github.io/cakemanager-couscous/" target="_self">
                             Home page
                         </a>
                     </li>
                                         <li class="">
-                        <a href="/" target="_self">
+                        <a href="http://leoruhland.github.io/cakemanager-couscous/" target="_self">
                             Getting Started
                         </a>
                     </li>
                                         <li class="">
-                        <a href="/" target="_self">
+                        <a href="http://leoruhland.github.io/cakemanager-couscous/" target="_self">
                             Installation
                         </a>
                     </li>
                                         <li class="">
-                        <a href="/" target="_self">
+                        <a href="http://leoruhland.github.io/cakemanager-couscous/" target="_self">
                             Configuration
                         </a>
                     </li>
                                         <li class="">
-                        <a href="/" target="_self">
+                        <a href="http://leoruhland.github.io/cakemanager-couscous/" target="_self">
                             FAQ
                         </a>
                     </li>
